--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "start": "nx serve",
+    "build": "nx build",
+    "watch": "nx build --watch --configuration development",
+    "test": "nx test"
   },
   "private": true,
   "dependencies": {
+    "@abacritt/angularx-social-login": "^2.1.0",
     "@angular/animations": "^16.1.0",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
@@ -18,6 +19,8 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.0",
+    "@nrwl/angular": "^16.6.0",
     "bootstrap": "^5.3.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -25,8 +28,13 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.7",
+    "@angular-devkit/core": "~16.1.7",
+    "@angular-devkit/schematics": "~16.1.7",
     "@angular/cli": "~16.1.7",
     "@angular/compiler-cli": "^16.1.0",
+    "@nx/js": "16.6.0",
+    "@nx/workspace": "16.6.0",
+    "@schematics/angular": "~16.1.7",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
@@ -34,6 +42,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "nx": "16.6.0",
+    "prettier": "^2.6.2",
     "typescript": "~5.1.3"
   }
 }
